imagemagick (8:6.6.7.2-1) unstable; urgency=low

  [ Bastien ROUCARIÈS ]
  * Switch build architecture to git-buildpackage over svn.
  * Modify rules in order to use git-buildpackage.
  * New upstream release. Drop patch for reading config files 
  from current directory, corrected upstream.
  * Fix a build failure

 -- Bastien ROUCARIÈS <roucaries.bastien+debian@gmail.com>  Fri, 21 Jan 2011 18:01:33 +0100

imagemagick (8:6.6.0.4-3) unstable; urgency=medium

  * Apply fix for reading config files from current directory, found by
    Jakub Wilk <jwilk@debian.org> (Closes: #601824).
    Thanks to Andreas Metzler <ametzler@downhill.at.eu.org> for the nicely
    formatted patch.

 -- Nelson A. de Oliveira <naoliv@debian.org>  Tue, 16 Nov 2010 10:53:04 -0200

imagemagick (8:6.6.0.4-2.2) unstable; urgency=low

  * Non-maintainer upload.
  * Change Recommends on ufraw to ufraw-batch (closes: #579775).

 -- Julien Cristau <jcristau@debian.org>  Tue, 10 Aug 2010 18:21:24 -0400

imagemagick (8:6.6.0.4-2.1) unstable; urgency=low

  * Non-maintainer upload.
  * Re-upload 6.6.0.4 with bumped epoch to revert ABI breakage (closes:
    #587227).

 -- Julien Cristau <jcristau@debian.org>  Thu, 05 Aug 2010 13:19:32 -0400

imagemagick (7:6.6.0.4-2) unstable; urgency=low

  * Revert debian/patches/type.xml.patch for now, while we address this issue
    with upstream (Closes: #573983).
  * debian/control: make libmagickcore3-extra provides libmagickcore-extra
    (Closes: #574058). Thanks, Stuart Prescott!

 -- Nelson A. de Oliveira <naoliv@debian.org>  Wed, 17 Mar 2010 10:18:13 -0300

imagemagick (7:6.6.0.4-1) unstable; urgency=low

  * New upstream release.
  * Upload to unstable.

 -- Nelson A. de Oliveira <naoliv@debian.org>  Fri, 12 Mar 2010 15:13:35 -0300

imagemagick (7:6.5.9.8-1) experimental; urgency=low

  * New upstream release;
  * Upstream updated SONAME version (Closes: #564123):
    - debian/control: bump libmagickcore2, libmagickwand2 and libmagick++2 to